# celestia-gaia-stardb

./: .gitignore  .pylintrc  Cargo.toml  Pipfile  README.md  download_data  download_data.py  make_stardb  make_stardb.py  parse_hip.py  parse_tyc.py  parse_utils.py  requirements.txt  spparse.py
.cargo/: config.toml
celestia_gaia/: directories.py  download_data.py  gaia_data.py  hip_dist.py  make_stardb.py  parse_hip.py  parse_tyc.py  parse_utils.py  ranges.py  spparse.py  utils.py
output/: CREDITS.md
src/: astro.rs  csv.rs  error.rs  hip2dist.rs  lib.rs  tychip.rs  votable.rs  xmatch.rs
src/hip2dist/: distributions.rs  estimate.rs
src/votable/: read.rs  write.rs
src/xmatch/: hip.rs  tyc.rs
tests/: test_spparse.py
