[package]
name = "celestia_gaia"
authors = ["Andrew Tribick <ajtribick@googlemail.com>"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "celestia_gaia"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.0"
bitvec = "0.22.3"
byteorder = "1.4"
crossbeam-channel = "0.5.1"
flate2 = "1.0"
globset = "0.4.8"
memchr = "2.4"
nalgebra = "0.27.1"
numpy = "0.15.0"
num_cpus = "1.13"
once_cell = "1.10"
pyo3 = {version="0.15.1", features=["extension-module"]}
quick-xml = "0.22.0"
rand = "0.8.4"
statrs = "0.15"
tinyvec = {version="1.6", features=["rustc_1_55", "std"]}
