[package]
name = "celestia_gaia"
authors = ["Andrew Tribick <ajtribick@googlemail.com>"]
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "celestia_gaia"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.2"
bitvec = "1.0.1"
byteorder = "1.4.3"
crossbeam-channel = "0.5.8"
flate2 = "1.0.27"
globset = "0.4.13"
memchr = "2.5.0"
nalgebra = "0.32.3"
numpy = "0.19.0"
num_cpus = "1.16.0"
once_cell = "1.18.0"
pyo3 = {version="0.19.2", features=["extension-module"]}
quick-xml = "0.30.0"
rand = "0.8.5"
tinyvec = {version="1.6.0", features=["rustc_1_55", "std"]}
libm = "0.2.7"
rand_distr = "0.4.3"
